# Zephyr

./: .gitignore
I2C_Scanner/: CMakeLists.txt  README.md  prj.conf
I2C_Scanner/boards/: esp32_wroom_devkitc.overlay
I2C_Scanner/src/: main.c
I2C_TempSensor_OLED/: prj.conf
I2C_TempSensor_OLED/boards/: esp32_devkitc_wroom.overlay
OTA_BLE_SmartLock/: CMakeLists.txt  prj.conf
OTA_BLE_SmartLock/boards/: esp32_devkitc_wroom.overlay
OTA_BLE_SmartLock/src/: main.c
Smart_Access_Control/: CMakeLists.txt  README.md  prj.conf
Smart_Access_Control/Smart_Access_Control_WebUI/: Lock2.html  Lock3.html
Smart_Access_Control/src/: main.c
Ultrasonic_Radar/: CMakeLists.txt  README.md  prj.conf
Ultrasonic_Radar/boards/: esp32_devkitc_wroom.overlay
Ultrasonic_Radar/src/: main.c
Ultrasonic_Radar_Interrupt/: CMakeLists.txt  README.md
Ultrasonic_Radar_Interrupt/boards/: esp32_devkitc_wroom.overlay
Ultrasonic_Radar_Interrupt/src/: main.c
Wifi_Radar/: CMakeLists.txt  prj.conf
Wifi_Radar/boards/: esp32_devkitc_wroom.conf  esp32_devkitc_wroom.overlay
Wifi_Radar/src/: main.c  wifi.c
i2c_esp32_sd/: CMakeLists.txt  README.md  prj.conf
i2c_esp32_sd/boards/: esp32_wroom_devkitc.overlay
i2c_esp32_sd/src/: main.c
interrupt_button_led/boards/: esp32_devkitc_wroom.overlay
interrupt_button_led/src/: main.c
led_pattern_binary/: CMakeLists.txt  README.md
led_pattern_binary/src/: main.c
stmf303r/: Kconfig  Kconfig.board  Kconfig.stmf303r  board.cmake  board.yml  stmf303r-pinctrl.dtsi  stmf303r.dts  stmf303r_defconfig
wifi_mqtt_sensor/: prj.conf
(+8 files in other folders)
